[gd_scene load_steps=8 format=2]

[ext_resource path="res://GFX/Thumbnail/fence.png" type="Texture" id=1]
[ext_resource path="res://GFX/Thumbnail/hedge.png" type="Texture" id=2]
[ext_resource path="res://GFX/Thumbnail/cartHigh.png" type="Texture" id=3]
[ext_resource path="res://GFX/Fonts/MaldiniBold-EaqGW.otf" type="DynamicFontData" id=4]
[ext_resource path="res://GFX/e56b63d12e334969433055bf078e457f.jpg" type="Texture" id=5]
[ext_resource path="res://Arena/AssetSpawn.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 4 )

[node name="AssetBrowser" type="CanvasLayer"]

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 150.0
margin_bottom = 300.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_right = 150.0
margin_bottom = 300.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heading" type="Label" parent="Control/VBoxContainer"]
margin_right = 150.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 0
text = "Items"
align = 1

[node name="Hedge" type="TextureButton" parent="Control/VBoxContainer"]
margin_left = 28.0
margin_top = 50.0
margin_right = 122.0
margin_bottom = 73.0
size_flags_horizontal = 4
texture_normal = ExtResource( 2 )

[node name="Fence" type="TextureButton" parent="Control/VBoxContainer"]
margin_left = 30.0
margin_top = 88.0
margin_right = 120.0
margin_bottom = 123.0
size_flags_horizontal = 4
texture_normal = ExtResource( 1 )

[node name="Cart" type="TextureButton" parent="Control/VBoxContainer"]
margin_left = 5.0
margin_top = 138.0
margin_right = 145.0
margin_bottom = 217.0
size_flags_horizontal = 4
texture_normal = ExtResource( 3 )
[connection signal="pressed" from="Control/VBoxContainer/Hedge" to="Control" method="_on_Hedge_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Fence" to="Control" method="_on_Fence_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Cart" to="Control" method="_on_Cart_pressed"]
